# LP-1

A1-2/Exemplos/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conv.cpp  conv.h  conversor  main.cpp
A1-2/Exercícios/: media  media.cpp
A18/: Pilha.h  main.cpp  programa
A3/Exemplos/: fat_rec.cpp  fatorial  fib.cpp  fibonacci  mdc  mdc.cpp  soma  soma.cpp
A7/: Makefile
A7/include/: aluno.h
A7/src/: aluno.cpp  main.cpp
A8-1/: Makefile
A8-1/include/: tempo.h
A8-1/src/: main.cpp  tempo.cpp
A8/include/: algebra.h
A8/src/: algebra.cpp  main.cpp
